<resources>
    <string name="app_name">LISTA DE COMPRAS</string>
    <string name="delete">Delete</string>
    <string name="adicionar">Adicionar</string>
    <string name="dialog_title">Item</string>
    <string name="dialog_teste_message">Aqui ficará o campo de texto</string>
    <string name="ok">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="sera_salvo">O item será salvo</string>
    <string name="nao_sera_salvo">O Item não será salvo</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="dialog_insert_title">Insira um item: </string>
    <string name="dialog_edit_title">Edite o item: </string>
    <string name="sera_editado">O conteudo será editado</string>
    <string name="already_exists">Ja existe</string>
    <string name="about_me">Sobre mim</string>
    <string name="the_author">Autor: Adriano Ivan de Paula Campos</string>
    <string name="my_contact">Contato: adrianoivandepaulacampos@gmail.com</string>
    <string name="explanation_app">Este CRUD é o trabalho final da matéria de Dispositivos Móveis</string>
    <string name="version_app">Versão 1.0.0</string>
    <string name="reserved_rights">Todos os direitos reservados</string>
    <array name="itens">

    </array>
</resources>