<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/context_about_author"
        android:icon="@android:drawable/ic_dialog_info"
        android:menuCategory="secondary"

        android:title="@string/about_me"
        app:showAsAction="always" />

    <item
        android:id="@+id/context_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/adicionar"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/context_edit"
        android:visible="false"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/editar"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/context_delete"
        android:visible="false"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/deletar"
        app:showAsAction="always"
        />
</menu>